tests/ui/const-generics/generic_const_exprs/issue-72787.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-72787.rs:11:17
   |
LL |     Condition<{ LHS <= RHS }>: True
   |                 ^^^ cannot perform const operation using `LHS`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `LHS`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/issue-72787.rs:11:24
   |
LL |     Condition<{ LHS <= RHS }>: True
   |                        ^^^ cannot perform const operation using `RHS`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `RHS`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/issue-72787.rs:23:25
   |
LL |     IsLessOrEqual<{ 8 - I }, { 8 - J }>: True,
   |                         ^ cannot perform const operation using `I`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `I`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/issue-72787.rs:23:36
   |
LL |     IsLessOrEqual<{ 8 - I }, { 8 - J }>: True,
   |                                    ^ cannot perform const operation using `J`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `J`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: aborting due to 4 previous errors

